fix: add missing padding to tree panes

--- a/src/main/resources/net/darmo_creations/jenealogio2/themes/common.css
+++ b/src/main/resources/net/darmo_creations/jenealogio2/themes/common.css
@@ -10,6 +10,10 @@
   -fx-cursor: hand;
 }
 
+.tree-pane {
+  -fx-padding: 10px;
+}
+
 .table-row-cell > .table-cell:disabled {
   -fx-opacity: 0.4;
 }
